convert notebooks to md-files

--- a/Farsi_notebook/01-fa.ipynb
+++ b/Farsi_notebook/01-fa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e0c02e17",
+   "id": "1c235d49",
    "metadata": {},
    "source": [
     "اجرای کدهای پایتون"
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "345a666e",
+   "id": "0161594b",
    "metadata": {},
    "source": [
     "پایتون زبان بسیار انعطاف‌پذیری است و با توجه به نیاز و کاری که دارید، می‌توانید به روش‌های مختلفی از آن استفاده کنید.\n",
     "یکی از وجوه تمایز اصلی پایتون با بسیاری از زبان‌های دیگر، «تفسیری» بودن آن است، برخلاف زبان‌های «کامپایلری» مثل Fortran، C یا Java.\n",
-    "این ویژگی باعث می‌شود کدها خط به خط اجرا شوند و به برنامه‌نویس این امکان را می‌دهند که به شکل تعاملی و پویا کد بزند، چیزی که در زبان‌های کامپایلری به سادگی ممکن نیست. این بخش به چهار روش اصلی برای اجرای کد پایتون می‌پردازد: استفاده از مفسر استاندارد پایتون، مفسر پیشرفته‌تر IPython، نوشتن و اجرای اسکریپت‌های مستقل، و finally کار در محیط جupyter Notebook."
+    "این ویژگی باعث می‌شود کدها خط به خط اجرا شوند و به برنامه‌نویس این امکان را می‌دهند که به شکل تعاملی و پویا کد بزند، چیزی که در زبان‌های کامپایلری به سادگی ممکن نیست. این بخش به چهار روش اصلی برای اجرای کد پایتون می‌پردازد: استفاده از مفسر استاندارد پایتون، مفسر پیشرفته‌تر IPython، نوشتن و اجرای اسکریپت‌های مستقل، و finally کار در محیط jupyter Notebook."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1e591cd1",
+   "id": "9d80ee93",
    "metadata": {},
    "source": [
     "### پوسته پایتون (The Python Interpreter)\n",
@@ -94,6 +94,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94934004",
+   "metadata": {},
+   "source": [
+    "<div style=\"direction: rtl; text-align:right;\"></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ecfe2f5a",
    "metadata": {},
    "source": [
@@ -123,6 +131,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65fbaa54",
+   "metadata": {},
+   "source": [
+    "<div style=\"direction: rtl; text-align:right;\"></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a2c7547f",
    "metadata": {},
    "source": [
@@ -134,11 +150,33 @@
     "\n",
     "نوتبوک هم به عنوان یک محیط توسعه و هم به عنوان ابزاری برای به اشتراک گذاری کارها از طریق گزارش‌های غنی محاسباتی و داده‌محور که کدها، نمودارها، داده‌ها و متن را با هم ترکیب می‌کنند، بسیار مفید است."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ec42c3b",
+   "metadata": {},
+   "source": [
+    "<div style=\"direction: rtl; text-align:right;\"></div>"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
