--- a/Farsi_notebook/05-fa.ipynb
+++ b/Farsi_notebook/05-fa.ipynb
@@ -844,7 +844,7 @@
    "id": "2434043e",
    "metadata": {},
    "source": [
-    "مقادیر Boolean را می‌توان با استفاده از **constructor** آبجکت `bool()` نیز ساخت: مقادیر هر نوع دیگری را می‌توان با استفاده از قوانین قابل پیش‌بینی به Boolean تبدیل کرد.\n",
+    "aمقادیر Boolean را می‌توان با استفاده از **constructor** آبجکت `bool()` نیز ساخت: مقادیر هر نوع دیگری را می‌توان با استفاده از قوانین قابل پیش‌بینی به Boolean تبدیل کرد.\n",
     "\n",
     "برای مثال، هر نوع عددی اگر برابر با صفر باشد، `False` و در غیر این صورت `True` خواهد بود:"
    ]
