--- a/Farsi_notebook/09-fa.ipynb
+++ b/Farsi_notebook/09-fa.ipynb
@@ -552,7 +552,7 @@
    "id": "11a74aa5",
    "metadata": {},
    "source": [
-    "اکنون کاربر دقیقاً می‌داند چرا ورودی نامعتبر است و حتی می‌تواند از بلوک ``try``...``except`` برای مدیریت آن استفاده کند!"
+    "aاکنون کاربر دقیقاً می‌داند چرا ورودی نامعتبر است و حتی می‌تواند از بلوک ``try``...``except`` برای مدیریت آن استفاده کند!"
    ]
   },
   {
