review 00-fa.md

--- a/Farsi_md/00-fa.md
+++ b/Farsi_md/00-fa.md
@@ -1,51 +1,47 @@
 ## مقدمه
 
 
-پایتون که در اواخر دهه ۱۹۸۰ به عنوان یک زبان تدریس و اسکریپت‌نویسی متولد شد، از آن زمان تاکنون به ابزاری ضروری برای بسیاری از برنامه‌نویسان، مهندسان، پژوهشگران و دانشمندان داده در حوزه‌های دانشگاهی و صنعتی تبدیل شده است.
-به عنوان یک اخترشناس که بر ساخت و ترویج ابزارهای آزاد و متن‌باز برای علم داده‌محور متمرکز هستم، پایتون را تقریباً گزینه‌ای بی‌نظیر برای انواع چالش‌های روزمره‌ام یافته‌ام؛ خواه استخراج معنا از مجموعه‌داده‌های عظیم نجومی باشد، خواه **Scraping** و پالایش منابع داده از وب، یا خودکارسازی وظایف روزمره پژوهشی.
+پایتون که در اواخر دهه ۱۹۸۰ به عنوان یک زبان آموزشی و اسکریپت‌نویسی متولد شد، از آن زمان تاکنون به ابزاری ضروری برای بسیاری از برنامه‌نویسان، مهندسان، پژوهشگران و دانشمندان داده در حوزه‌های دانشگاهی و صنعتی تبدیل شده است.
+به عنوان یک اخترشناس که بر ساخت و ترویج ابزارهای آزاد و متن‌باز برای علم داده‌ متمرکز هستم، پایتون را تقریباً گزینه‌ای بی‌نظیر برای انواع چالش‌های روزمره‌ام یافته‌ام؛ خواه استخراج معنا از مجموعه‌داده‌های عظیم نجومی باشد، خواه **Scraping** و پالایش منابع داده از وب، یا خودکارسازی وظایف روزمره پژوهشی.
 
 جذابیت پایتون در سادگی و زیبایی آن، و همچنین راحتی حاصل از اکوسیستم گسترده ابزارهای خاص حوزه‌های تخصصی است که بر بستر آن ساخته شده‌اند.
 برای مثال، بیشتر کد پایتون در محاسبات علمی و علم داده حول مجموعه‌ای از پکیج‌های مفید و بالغ شکل گرفته است:
 
--   [NumPy](http://numpy.org) ذخیره‌سازی و محاسبات کارا برای آرایه‌های داده چندبعدی را فراهم می‌کند.
--   [SciPy](http://scipy.org) شامل طیف وسیعی از ابزارهای عددی مانند انتگرال‌گیری و درونیابی عددی است.
--   [Pandas](http://pandas.pydata.org) یک آبجکت **DataFrame** به همراه مجموعه‌ای قدرتمند از متدها برای دستکاری، فیلتر کردن، گروه‌بندی و تبدیل داده ارائه می‌دهد.
--   [Matplotlib](http://matplotlib.org) یک رابط مفید برای خلق نمودارها و figures با کیفیت مناسب انتشار فراهم می‌کند.
--   [Scikit-Learn](http://scikit-learn.org) یک جعبهابزار یکنواخت برای اعمال الگوریتم‌های رایج **Machine Learning** روی داده‌ها ارائه می‌دهد.
--   [IPython/Jupyter](http://jupyter.org) یک ترمینال پیشرفته و یک محیط **Interactive Notebook** فراهم می‌کند که برای تحلیل اکتشافی و همچنین خلق مستندات تعاملی و قابل اجرا مفید است. برای مثال، خود این manuscript (تقریر/مقاله) کاملاً در **Jupyter Notebooks** نوشته شده است.
+-   [NumPy](http://numpy.org): 
 
-ابزارها و بسته‌های متعدد دیگری که اینها را همراهی می‌کنند کم‌اهمیت‌تر نیستند: اگر وظیفه علمی یا تحلیل داده‌ای وجود دارد که می‌خواهید انجام دهید، به احتمال زیاد کسی قبلاً پکیجی برای انجام آن نوشته است.
+ذخیره‌سازی و محاسبات کارا برای آرایه‌های داده چندبعدی را فراهم می‌کند.
+
+-   [SciPy](http://scipy.org):
+
+ شامل طیف وسیعی از ابزارهای عددی مانند انتگرال‌گیری و درونیابی عددی است.
+
+-   [Pandas](http://pandas.pydata.org):
+
+ یک آبجکت **DataFrame** به همراه مجموعه‌ای قدرتمند از متدها برای دستکاری، فیلتر کردن، گروه‌بندی و تبدیل داده ارائه می‌دهد.
+
+-   [Matplotlib](http://matplotlib.org):
+
+ یک رابط مفید برای خلق نمودارها و تصاویر با کیفیت مناسب انتشار فراهم می‌کند.
+
+-   [Scikit-Learn](http://scikit-learn.org):
+
+ یک جعبه ابزار یکپارچه برای اعمال الگوریتم‌های رایج **Machine Learning** روی داده‌ها ارائه می‌دهد.
+
+-   [IPython/Jupyter](http://jupyter.org):
+
+ یک ترمینال پیشرفته و یک محیط تعاملی فراهم می‌کند که برای تحلیل اکتشافی و همچنین خلق مستندات تعاملی و قابل اجرا مفید است.
+
+
+ابزارها و بسته‌های متعدد دیگری که اینها را همراهی می‌کنند کم‌اهمیت‌تر نیستند: اگر عملیات علمی یا تحلیل داده‌ای وجود دارد که می‌خواهید انجام دهید، به احتمال زیاد کسی قبلاً پکیجی برای انجام آن نوشته است.
 
 با این حال، برای بهره بردن از قدرت این اکوسیستم علم داده، ابتدا نیازمند آشنایی با خود زبان پایتون هستیم.
-اغلب با دانشجویان و همکارانی روبرو می‌شوم که (گاهی پیشینه قابل توجهی) در برنامه‌نویسی به زبانی دیگر—مانند MATLAB، IDL، R، Java، C++ و غیره—دارند و به دنبال گردشی کوتاه اما جامع از زبان پایتون هستند که به سطح دانش آنها احترام بگذارد و از نقطه صفر شروع نکند.
-این گزارش در پی پر کردن همین جای خالی است.
+اغلب با دانشجویان و همکارانی روبرو می‌شوم که (گاهی پیشینه قابل توجهی) در برنامه‌نویسی به زبانی دیگر—مانند MATLAB، IDL، R، Java، C و غیره—دارند و به دنبال گردشی کوتاه اما جامع از زبان پایتون هستند که به سطح دانش آنها احترام بگذارد و از نقطه صفر شروع نکنند.
+این کتاب در پی پر کردن همین جای خالی است.
 
-به همین خاطر، این گزارش به هیچ وجه قصد ندارد یک مقدمه جامع بر برنامه‌نویسی، یا یک معرفی کامل به خود زبان پایتون باشد؛ اگر به دنبال چنین چیزی هستید، می‌توانید به یکی از مراجع پیشنهادی فهرست شده در [منابع یادگیری](16-Further-Resources.ipynb) مراجعه کنید.
+به همین خاطر، این کتاب به هیچ وجه قصد ندارد یک مقدمه جامع بر برنامه‌نویسی، یا یک معرفی کامل به خود زبان پایتون باشد؛ اگر به دنبال چنین چیزی هستید، می‌توانید به یکی از مراجع پیشنهادی فهرست شده در [منابع یادگیری](16-Further-Resources.ipynb) مراجعه کنید.
 در عوض، اینجا یک گردش سریع و فشرده ارائه خواهد شد از برخی مباحث ضروری مانند: سینتکس و معناشناسی پایتون، انواع داده و ساختارهای داخلی آن، تعریف توابع، دستورات کنترل جریان و سایر جنبه‌های این زبان.
-هدفم این است که خوانندگان با پایه‌ای محکم از اینجا بیرون بروند تا بتوانند پشته علم داده که به اختصار outlined شد را کاوش کنند.
+هدف من این است که خوانندگان با پایه محکمی که بر اساس آن می‌توانند مباحث علم داده را که اخیراً شرح داده شده است، بررسی کنند، این کتاب را به پایان برسانند.
 
----
-
-**نکات ترجمه و سبک به کار رفته:**
-
-*   **Conceived:** به «متولد شد» ترجمه شد تا روان‌تر باشد.
-*   **Scripting language:** به «زبان اسکریپت‌نویسی» ترجمه شد که ترجمه رایج و دقیق است.
-*   **Data-intensive science:** به «علم داده‌محور» ترجمه شد تا هم مفهوم را برساند و هم برای مخاطب فارسی‌زبان گویا باشد.
-*   **Scraping and munging:** «Scraping» به صورت اصلی باقی ماند (چون یک اصطلاح تخصصی رایج است) و «munging» به «پالایش» ترجمه شد که معادل مناسبی برای cleaning/wrangling است.
-*   **DataFrame, Machine Learning, Interactive Notebook, Jupyter Notebooks:** همه این اصطلاحات تخصصی به انگلیسی باقی ماندند.
-*   **Manuscript:** چون در کنار "this report" آمده و در بافت نوشتن در Jupyter است، به «مقاله» یا «تقریر» ترجمه شد و خود کلمه manuscript هم در پرانتز آمد تا دقیق‌تر باشد.
-*   **From ground zero:** به «از نقطه صفر» ترجمه شد که معادل رایج و رساست.
-*   **Whirlwind tour:** به «گردش سریع و فشرده» ترجمه شد تا مفهوم را برساند.
-*   **Syntax and semantics:** به «سینتکس و معناشناسی» ترجمه شد که ترجمه‌های استاندارد این مفاهیم در برنامه‌نویسی هستند.
-*   **Control flow statements:** به «دستورات کنترل جریان» ترجمه شد.
-*   **Walk away with a solid foundation:** به «با پایه‌ای محکم از اینجا بیرون بروند» ترجمه شد تا مفهوم به صورت طبیعی منتقل شود.
-*   **Data science stack:** به «پشته علم داده» ترجمه شد که ترجمه مصطلح «Stack» در این حوزه است.
-
-منتظر بخش بعدی هستم.
-
-
-
-**ترجمه:**
 
 ## استفاده از مثال‌های کد
 
@@ -59,7 +55,7 @@
 
 برای مثال:
 *   نوشتن برنامه‌ای که از چندین تکه کد این کتاب استفاده می‌کند، **نیازمند مجوز نیست**.
-*   فروش یا توزیع یک سیدی-رام حاوی مثال‌های کتاب‌های انتشارات O’Reilly **نیازمند مجوز است**.
+*   فروش یا توزیع یک CD-ROM حاوی مثال‌های کتاب‌های انتشارات O’Reilly **نیازمند مجوز است**.
 *   پاسخ به یک سؤال با استناد به این کتاب و نقل قول مثال کد **نیازمند مجوز نیست**.
 *   گنجاندن حجم قابل‌توجهی از مثال کد این کتاب در مستندات محصول شما **نیازمند مجوز است**.
 
@@ -68,66 +64,37 @@
 برای مثال:
 "A Whirlwind Tour of Python by Jake VanderPlas (O’Reilly). Copyright 2016 O’Reilly Media, Inc., 978-1-491-96465-1."
 
-اگر احساس می‌کنید استفاده شما از مثال‌های کد خارج از حد مجاز استفاده منصفانه (Fair Use) یا دستوری که در بالا داده شد قرار می‌گیرد، با آدرس
+اگر احساس می‌کنید استفاده شما از مثال‌های کد خارج از حد مجاز استفاده منصفانه یا دستوری که در بالا داده شد قرار می‌گیرد، با آدرس
 permissions@oreilly.com
 تماس بگیرید.
 
----
 
-**نکات ترجمه و سبک به کار رفته:**
-
-*   **Using Code Examples:** به «استفاده از مثال‌های کد» ترجمه شد. از ترجمه تحت‌اللفظی «مثال‌های کد استفاده کردن» پرهیز شد.
-*   **Supplemental material:** به «مطالب تکمیلی» ترجمه شد که ترجمه‌ای دقیق و حرفه‌ای است.
-*   **Get your job done:** به «انجام کارهایتان» ترجمه شد تا مفهوم را به صورت طبیعی برساند.
-*   **In general:** به «به طور کلی» ترجمه شد.
-*   **Offered with this book:** به «همراه این کتاب ارائه شده است» ترجمه شد.
-*   **Reproducing a significant portion:** به «بازتولید بخش قابل‌توجهی» ترجمه شد. «بازتولید» ترجمه دقیق‌تری برای Reproduce نسبت به «تکثیر» یا «کپی» است.
-*   **Chunks of code:** به «تکه کد» ترجمه شد که معادل رایج و مصطلح است.
-*   **CD-ROM:** به «سیدی-رام» ترجمه شد و شکل نوشتاری آن حفظ شد.
-*   **Citing this book and quoting example code:** به «استناد به این کتاب و نقل قول مثال کد» ترجمه شد.
-*   **Fair use:** به «استفاده منصفانه» ترجمه شد و خود اصطلاح اصلی (Fair Use) هم در پرانتز آمد تا برای خواننده آشنا باشد.
-*   **Feel free to contact us:** به «تماس بگیرید» ترجمه شد. از آوردن ترجمه تحت‌اللفظی «احساس راحتی کنید» پرهیز شد.
-*   ساختار لیست‌مانند پاراگراف وسط برای خوانایی بیشتر به صورت بولت‌points درآمد (با استفاده از ستاره) که در فارسی هم کاملاً قابل قبول و رایج است.
-*   نقل قول آخر دقیقاً و بدون تغییر آورده شد زیرا یک متن ثابت و حقوقی است.
-
-منتظر بخش بعدی هستم.
 
 ## نصب و ملاحظات عملی
 
 نصب پایتون و مجموعه کتابخانه‌هایی که محاسبات علمی را ممکن می‌سازند، چه از ویندوز استفاده کنید، چه لینوکس یا مک اواس ایکس، کاری سرراست است. این بخش به برخی از ملاحظات هنگام راه‌اندازی رایانه شما می‌پردازد.
 
-**توضیحات ترجمه:**  
-- عبارت "Installation and Practical Considerations" به "نصب و ملاحظات عملی" ترجمه شد که ترجمه‌ای دقیق و حرفه‌ای است.  
-- "suite of libraries" به "مجموعه کتابخانه‌ها" ترجمه شد.  
-- "scientific computing" به "محاسبات علمی" ترجمه شد که ترجمه‌ای استاندارد است.  
-- "straightforward" به "سرراست" ترجمه شد تا هم سادگی و هم مستقیم بودن فرآیند را برساند.  
-- "setting up your computer" به "راه‌اندازی رایانه شما" ترجمه شد که گویا و دقیق است.  
-
-منتظر ادامه متن باشید.
 
 
 ### پایتون ۲ در مقابل پایتون ۳
 
-این گزارش از سینتکس پایتون ۳ استفاده می‌کند که شامل بهبودهای زبانی است که با سری *۲.x* پایتون سازگاری ندارند. اگرچه پایتون ۳.۰ برای اولین بار در سال ۲۰۰۸ منتشر شد، اما استقبال از آن به نسبت کند بوده، به ویژه در جامعه محاسبات علمی و توسعه وب. این موضوع primarily به این دلیل است که زمان زیادی لازم بود تا بسیاری از بسته‌ها و جعبهابزارهای ضروری با ساختار داخلی جدید زبان سازگار شوند.
+این کتاب از سینتکس پایتون ۳ استفاده می‌کند که شامل بهبودهای زبانی است که با سری *۲.x* پایتون سازگاری ندارند. اگرچه پایتون ۳.۰ برای اولین بار در سال ۲۰۰۸ منتشر شد، اما استقبال از آن به نسبت کند بوده، به ویژه در جامعه محاسبات علمی و توسعه وب. این موضوع در درجه اول به این دلیل است که زمان زیادی لازم بود تا بسیاری از بسته‌ها و جعبه ابزارهای ضروری با ساختار داخلی جدید زبان سازگار شوند.
 
-با این حال، از اوایل سال ۲۰۱۴، نسخه‌های پایه مهم‌ترین ابزارهای اکوسیستم علم داده به طور کامل با هر دو نسخه پایتون ۲ و ۳ سازگار شده‌اند و بنابراین این کتاب از سینتکس جدیدتر پایتون ۳ استفاده خواهد کرد. حتی با وجود این شرایط، اکثریت قاطع تکه‌کدهای این کتاب بدون تغییر در پایتون ۲ نیز کار خواهند کرد. در مواردی که از سینتکس ناسازگار با پایتون ۲ استفاده شده است، تمام تلاش خود را به کار خواهم گرفت تا به صورت explicit آن را یادآوری کنم.
+با این حال، از اوایل سال ۲۰۱۴، نسخه‌های پایه مهم‌ترین ابزارهای اکوسیستم علم داده به طور کامل با هر دو نسخه پایتون ۲ و ۳ سازگار شده‌اند و بنابراین این کتاب از سینتکس جدیدتر پایتون ۳ استفاده خواهد کرد. حتی با وجود این شرایط، اکثریت قاطع تکه‌کدهای این کتاب بدون تغییر در پایتون ۲ نیز کار خواهند کرد. در مواردی که از سینتکس ناسازگار با پایتون ۲ استفاده شده است، تمام تلاش خود را به کار خواهم گرفت تا به صورت صریح آن را یادآوری کنم.
 
----
-
-**ملاحظات ترجمه:**  
-- عنوان به صورت تحت‌اللفظی اما روان ترجمه شد.  
-- اصطلاحات تخصصی مانند **Syntax**، **Python 2.x series**، **Language internals**، **Data science ecosystem**، **Code snippets** و **Py2-incompatible** به صورت اصلی حفظ شدند.  
-- عبارت **"This is primarily because..."** به «این موضوع primarily به این دلیل است...» ترجمه شد تا هم مفهوم منتقل شود و هم تأکید روی علت اصلی حفظ گردد.  
-- **"I will make every effort to note it explicitly"** به «تمام تلاش خود را به کار خواهم گرفت تا به صورت explicit آن را یادآوری کنم» ترجمه شد که مفهوم دقت و وضوح را می‌رساند.  
-- لحن ترجمه همچنان رسمی اما روان و قابل فهم است.
 
 
 ### نصب با استفاده از conda
 
-اگرچه روش‌های مختلفی برای نصب پایتون وجود دارد، اما روشی که من پیشنهاد می‌کنم - به‌ویژه اگر قصد استفاده از ابزارهای علم داده که پیشتر ذکر شد را دارید - از طریق توزیع چندسکویی Anaconda است. توزیع Anaconda در دو variant مختلف ارائه می‌شود:
+اگرچه روش‌های مختلفی برای نصب پایتون وجود دارد، اما روشی که من پیشنهاد می‌کنم - به‌ویژه اگر قصد استفاده از ابزارهای علم داده که پیشتر ذکر شد را دارید - از طریق توزیع چندسکویی Anaconda است. توزیع Anaconda در دو نوع مختلف ارائه می‌شود:
 
-- [Miniconda](http://conda.pydata.org/miniconda.html) که شامل مفسر پایتون به همراه یک ابزار خط فرمان به نام ``conda`` است. این ابزار به عنوان یک مدیر بسته چندسکویی برای پکیج‌های پایتون عمل می‌کند و از نظر مفهومی مشابه ابزارهای ``apt`` یا ``yum`` است که کاربران لینوکس ممکن است با آنها آشنا باشند.
-- [Anaconda](https://www.continuum.io/downloads) که شامل هر دو جزء پایتون و ``conda`` بوده و علاوه بر این مجموعه‌ای از دیگر بسته‌های از پیش نصب شده را برای محاسبات علمی ارائه می‌دهد.
+- [Miniconda](http://conda.pydata.org/miniconda.html):
+
+ که شامل مفسر پایتون به همراه یک ابزار خط فرمان به نام ``conda`` است. این ابزار به عنوان یک مدیر بسته چندسکویی برای پکیج‌های پایتون عمل می‌کند و از نظر مفهومی مشابه ابزارهای ``apt`` یا ``yum`` است که کاربران لینوکس ممکن است با آنها آشنا باشند.
+
+- [Anaconda](https://www.continuum.io/downloads):
+
+ که شامل هر دو جزء پایتون و ``conda`` بوده و علاوه بر این مجموعه‌ای از دیگر بسته‌های از پیش نصب شده را برای محاسبات علمی ارائه می‌دهد.
 
 هر یک از بسته‌های موجود در Anaconda را می‌توان به صورت دستی روی Miniconda نیز نصب کرد. به همین دلیل، من شروع با Miniconda را پیشنهاد می‌کنم.
 
@@ -138,49 +105,33 @@ permissions@oreilly.com
 
 برای اطلاعات بیشتر در مورد ``conda``، از جمله اطلاعات مربوط به ایجاد و استفاده از محیط‌های conda، به مستندات بسته Miniconda که در صفحه فوق لینک شده است مراجعه کنید.
 
----
 
-**ملاحظات ترجمه:**  
-- اصطلاحات تخصصی مانند **conda**, **Anaconda**, **Miniconda**, **package manager**, **IPython notebook** و **environments** به صورت اصلی حفظ شدند.
-- عبارت **"cross-platform"** به «چندسکویی» ترجمه شد که ترجمه‌ای استاندارد و دقیق است.
-- **"geared toward"** به «برای» یا «مختص» ترجمه شد تا جمله روان باشد.
-- **"flavors"** به «variant» ترجمه شد که در این context مناسب‌تر است.
-- دستور ترمینال بدون تغییر باقی ماند.
-- لحن ترجمه همچنان رسمی اما قابل فهم است.
 
 ## فلسفه پایتون (The Zen of Python)
 
-طرفداران پایتون اغلب سریع اشاره می‌کنند که این زبان چقدر «درونی»، «زیبا» یا «سرگرم‌کننده» است. در حالی که من تمایل به موافقت دارم، اما همچنین می‌دانم که زیبایی، درونی بودن و سرگرمی اغلب دست در دست آشنایی دارند، و بنابراین برای کسانی که با زبان‌های دیگر آشنا هستند، چنین احساسات پرشوری ممکن است کمی خودپسندانه به نظر برسد.
-
-با این وجود، امیدوارم اگر به پایتون فرصتی دهید، ببینید که چنین برداشت‌هایی از کجا ناشی می‌شوند. و اگر *واقعاً* می‌خواهید به فلسفه برنامه‌نویسی که بخش عمده‌ای از تمرین کدنویسی کاربران حرفه‌ای پایتون را هدایت می‌کند، بپردازید، یک ایستر اگ گ کوچک و زیبا در مفسر پایتون وجود دارد: کافی است چشمان خود را ببندید، چند دقیقه مراقبه کنید و بنویسید:
+علاقه‌مندان به پایتون اغلب سریع به این نکته اشاره می‌کنند که پایتون چقدر «شهودی»، «زیبا» یا «سرگرم‌کننده» است. در حالی که من هم با این موضوع موافق هستم، همچنین می‌دانم که زیبایی، شهود و سرگرمی اغلب با هم همراه هستند و بنابراین برای کسانی که با زبان‌های دیگر آشنا هستند، چنین احساسات پرشوری می‌تواند کمی خودبینانه به نظر برسد. با این وجود، امیدوارم اگر به پایتون فرصتی بدهید، ببینید که چنین برداشت‌هایی از کجا ممکن است ناشی شود. و اگر واقعاً می‌خواهید در فلسفه برنامه‌نویسی که بخش زیادی از شیوه کدنویسی کاربران حرفه‌ای پایتون را هدایت می‌کند، عمیق شوید، یک راز کوچک و جالب در مفسر پایتون وجود دارد: کافیست چشمان خود را ببندید، چند دقیقه مدیتیشن کنید و این را وارد کنید:
 
 ```python
 import this
 ```
 The Zen of Python, by Tim Peters
 
-Beautiful is better than ugly.
-
-Explicit is better than implicit.
-
-Simple is better than complex.
-
-Errors should never pass silently.
-
-Unless explicitly silenced.
-
-In the face of ambiguity, refuse the temptation to guess.
-
-There should be one-- and preferably only one --obvious way to do it.
-
-Although that way may not be obvious at first unless you're Dutch.
-
-Now is better than never.
-
-Although never is often better than *right* now.
-
-If the implementation is hard to explain, it's a bad idea.
-
-If the implementation is easy to explain, it may be a good idea.
-
-Namespaces are one honking great idea -- let's do more of those!
+Beautiful is better than ugly.<br>
+Explicit is better than implicit.<br>
+Simple is better than complex.<br>
+Complex is better than complicated.<br>
+Flat is better than nested.<br>
+Sparse is better than dense.<br>
+Readability counts.<br>
+Special cases aren't special enough to break the rules.<br>
+Although practicality beats purity.<br>
+Errors should never pass silently.<br>
+Unless explicitly silenced.<br>
+In the face of ambiguity, refuse the temptation to guess.<br>
+There should be one-- and preferably only one --obvious way to do it.<br>
+Although that way may not be obvious at first unless you're Dutch.<br>
+Now is better than never.<br>
+Although never is often better than *right* now.<br>
+If the implementation is hard to explain, it's a bad idea.<br>
+If the implementation is easy to explain, it may be a good idea.<br>
+Namespaces are one honking great idea -- let's do more of those!<br>
