--- a/Farsi_md/01-fa.md
+++ b/Farsi_md/01-fa.md
@@ -3,7 +3,7 @@
 
 پایتون زبان بسیار انعطاف‌پذیری است و با توجه به نیاز و کاری که دارید، می‌توانید به روش‌های مختلفی از آن استفاده کنید.
 یکی از وجوه تمایز اصلی پایتون با بسیاری از زبان‌های دیگر، «تفسیری» بودن آن است، برخلاف زبان‌های «کامپایلری» مثل Fortran، C یا Java.
-این ویژگی باعث می‌شود کدها خط به خط اجرا شوند و به برنامه‌نویس این امکان را می‌دهند که به شکل تعاملی و پویا کد بزند، چیزی که در زبان‌های کامپایلری به سادگی ممکن نیست. این بخش به چهار روش اصلی برای اجرای کد پایتون می‌پردازد: استفاده از مفسر استاندارد پایتون، مفسر پیشرفته‌تر IPython، نوشتن و اجرای اسکریپت‌های مستقل، و finally کار در محیط jupyter Notebook.
+این ویژگی باعث می‌شود کدها خط به خط اجرا شوند و به برنامه‌نویس این امکان را می‌دهند که به شکل تعاملی و پویا کد بزند، چیزی که در زبان‌های کامپایلری به سادگی ممکن نیست. این بخش به چهار روش اصلی برای اجرای کد پایتون می‌پردازد: استفاده از مفسر استاندارد پایتون، مفسر پیشرفته‌تر IPython، نوشتن و اجرای اسکریپت‌های مستقل، و سرانجام کار در محیط jupyter Notebook.
 
 ### پوسته پایتون (The Python Interpreter)
 
