review 01-fa.md

--- a/Farsi_md/01-fa.md
+++ b/Farsi_md/01-fa.md
@@ -3,9 +3,9 @@
 
 پایتون زبان بسیار انعطاف‌پذیری است و با توجه به نیاز و کاری که دارید، می‌توانید به روش‌های مختلفی از آن استفاده کنید.
 یکی از وجوه تمایز اصلی پایتون با بسیاری از زبان‌های دیگر، «تفسیری» بودن آن است، برخلاف زبان‌های «کامپایلری» مثل Fortran، C یا Java.
-این ویژگی باعث می‌شود کدها خط به خط اجرا شوند و به برنامه‌نویس این امکان را می‌دهند که به شکل تعاملی و پویا کد بزند، چیزی که در زبان‌های کامپایلری به سادگی ممکن نیست. این بخش به چهار روش اصلی برای اجرای کد پایتون می‌پردازد: استفاده از مفسر استاندارد پایتون، مفسر پیشرفته‌تر IPython، نوشتن و اجرای اسکریپت‌های مستقل، و سرانجام کار در محیط jupyter Notebook.
+این ویژگی باعث می‌شود کدها خط به خط اجرا شوند و به برنامه‌نویس این امکان را می‌دهند که به شکل تعاملی و پویا کد بزند، چیزی که در زبان‌های کامپایلری به سادگی ممکن نیست. این بخش به چهار روش اصلی برای اجرای کد پایتون می‌پردازد: استفاده از مفسر استاندارد پایتون، مفسر پیشرفته‌تر IPython، نوشتن و اجرای اسکریپت‌های مستقل، و سرانجام کار در محیط Jupyter Notebook.
 
-### پوسته پایتون (The Python Interpreter)
+### پوسته پایتون 
 
 ساده‌ترین راه برای اجرای کد پایتون، کار کردن به صورت خط به خط در **پوسته پایتون** است.
 برای راه‌اندازی این محیط، پس از نصب پایتون (رجوع به بخش قبل)، کافیست در خط فرمان سیستم خود دستور `python` را تایپ کنید
@@ -31,7 +31,7 @@ Type "help", "copyright", "credits" or "license" for more information.
 
 پوسته پایتون این امکان را به شما می‌دهد تا قطعه کدهای کوچک را به راحتی آزمایش کنید و با دنباله‌های کوتاهی از عملیات‌ها کار کنید.
 
-### مفسر آی‌پایتون (The IPython Interpreter)
+### مفسر آی‌پایتون
 
 اگر زمانی را با مفسر پایهٔ پایتون کار کنید، به سرعت متوجه خواهید شد که بسیاری از ویژگی‌های یک محیط توسعهٔ تعاملی کامل را ندارد.
 یک مفسر جایگزین به نام **آی‌پایتون** (مخفف Interactive Python) به همراه توزیع آناکوندا ارائه می‌شود و مجموعه‌ای از بهبودهای کاربردی را نسبت به مفسر استاندارد پایتون در خود جای داده است.
@@ -51,7 +51,7 @@ object?   -> Details about 'object', use 'object??' for extra details.
 In [1]: 
 ```
 
-مهم‌ترین تفاوت ظاهری بین مفسر پایتون و آی‌پایتون، در **نشانگر خط فرمان** آن‌هاست: پایتون به طور پیش‌فرض از `>>>` استفاده می‌کند، در حالی که آی‌پایتون از دستورهای شماره‌دار استفاده می‌کند (مثلاً `In [1]:`).
+مهم‌ترین تفاوت ظاهری بین مفسر پایتون و آی‌پایتون، در **نشانگر خط فرمان** آن‌هاست: پایتون به طور پیش‌فرض از `<<<` استفاده می‌کند، در حالی که آی‌پایتون از دستورهای شماره‌دار استفاده می‌کند (مثلاً `:In [1]`).
 با این حال، دقیقاً مثل قبل می‌توانیم کدها را به صورت خط به خط اجرا کنیم:
 
 ``` ipython
@@ -68,10 +68,10 @@ Out[3]: 15
 آی‌پایتون طیف وسیعی از ویژگی‌های مفید را در اختیارتان قرار می‌دهد. برای مطالعه بیشتر در این زمینه، می‌توانید به بخش [منابع یادگیری تکمیلی](16-Further-Resources.ipynb) مراجعه کنید.
 
 
-### اسکریپت‌های مستقل پایتون (Self-contained Python scripts)
+### اسکریپت‌های مستقل پایتون 
 
 اگرچه اجرای خط به خط کدهای پایتون در بعضی موارد مفید است، اما برای برنامه‌های پیچیده‌تر، معمولاً ذخیرهٔ کد در یک فایل و اجرای یک‌جای آن راحت‌تر است.
-بر اساس قرارداد، اسکریپت‌های پایتون در فایل‌هایی با پسوند **.py** ذخیره می‌شوند.
+بر اساس قرارداد، اسکریپت‌های پایتون در فایل‌هایی با پسوند **py.** ذخیره می‌شوند.
 برای مثال، بیایید یک اسکریپت به نام **test.py** ایجاد کنیم که محتویات زیر را دارد:
 
 ``` python
@@ -81,7 +81,7 @@ x = 5
 print("Result is", 3 * x)
 ```
 
-برای اجرای این فایل، کافیست مطمئن شویم که در مسیر (directory) فعلی قرار دارد و سپس در خط فرمان دستور `python` را به همراه نام فایل تایپ کنیم:
+برای اجرای این فایل، کافیست مطمئن شویم که فایل مورد نظر در مسیر دایرکتوری فعلی قرار دارد و سپس در خط فرمان دستور `python` را به همراه نام فایل تایپ کنیم:
 
 ```
 $ python test.py
@@ -91,10 +91,10 @@ Result is 15
 
 برای برنامه‌های پیچیده‌تر، ایجاد اسکریپت‌های مستقل مانند این مثال، یک ضرورت محسوب می‌شود.
 
-### نوتبوک ژوپیتر (The Jupyter notebook)
+### نوتبوک ژوپیتر 
 
 ترکیب کاربردی محیط تعاملی و اسکریپت‌های مستقل، **نوتبوک ژوپیتر** است؛ یک فرمت سند که اجازه می‌دهد کدهای قابل اجرا، متن‌های فرمت‌شده، گرافیک‌ها و حتی ویژگی‌های تعاملی در یک سند واحد ترکیب شوند.
 
 اگرچه نوتبوک در ابتدا به عنوان یک فرمت مخصوص پایتون شروع به کار کرد، اما پس از آن با تعداد زیادی از زبان‌های برنامه‌نویسی سازگار شده و اکنون بخش ضروری از [پروژه ژوپیتر](https://jupyter.org/) به شمار می‌رود.
 
-نوتبوک هم به عنوان یک محیط توسعه و هم به عنوان ابزاری برای به اشتراک گذاری کارها از طریق گزارش‌های غنی محاسباتی و داده‌محور که کدها، نمودارها، داده‌ها و متن را با هم ترکیب می‌کنند، بسیار مفید است.
+نوتبوک، هم به عنوان یک محیط توسعه و هم به عنوان ابزاری برای به اشتراک گذاری کارها از طریق گزارش‌های غنی محاسباتی و داده‌محور که کدها، نمودارها، داده‌ها و متن را با هم ترکیب می‌کنند، بسیار مفید است.
