review 02-fa.md

--- a/Farsi_md/02-fa.md
+++ b/Farsi_md/02-fa.md
@@ -4,8 +4,7 @@
 شفافیت و نظم در ساختار پایتون باعث شده برخی آن را «شبه‌کد اجراپذیر» بنامند و در واقع تجربه شخصی من نیز نشان داده که خواندن و درک یک اسکریپت پایتون اغلب بسیار ساده‌تر از درک اسکریپتی مشابه نوشته شده به زبانی مثل C است.  
 در ادامه به بررسی اصلی‌ترین ویژگی‌های ساختار زبان پایتون می‌پردازیم.  
 
-منظور از **ساختار زبان** (syntax)، چارچوب و قواعدی است که یک برنامه درست‌شکل را تعریف می‌کند.  
-در حال حاضر، تمرکز ما بر روی **معناشناسی** (semantics) – یعنی معانی واژه‌ها و نمادهای within – نخواهد بود، اما بعداً به این موضوع بازخواهیم گشت.  
+نحو (syntax) به ساختار زبان اشاره دارد (یعنی آنچه یک برنامه‌ی صحیح را تشکیل می‌دهد). فعلاً، ما بر معناشناسی - معنای کلمات و نمادهای درون نحو - تمرکز نمی‌کنیم، اما بعداً به این موضوع باز خواهیم گشت. 
 
 مثال زیر را در نظر بگیرید:
 
@@ -48,7 +47,7 @@ upper: [5, 6, 7, 8, 9]
 x += 2  # مخفف x = x + 2
 ```
 
-پایتون هیچ syntax خاصی برای توضیحات چندخطی (مانند `/* ... */` که در C و C++ استفاده می‌شود) ندارد، اگرچه از رشته‌های چندخطی اغلب به عنوان جایگزینی برای توضیحات چندخطی استفاده می‌شود (بیشتر در این مورد در [دستکاری رشته‌ها و عبارات منظم](14-Strings-and-Regular-Expressions.ipynb) صحبت خواهیم کرد).
+پایتون هیچ syntax خاصی برای توضیحات چندخطی (مانند `/* ... */` که در C و ++C استفاده می‌شود) ندارد، اگرچه از رشته‌های چندخطی اغلب به عنوان جایگزینی برای توضیحات چندخطی استفاده می‌شود (بیشتر در این مورد در [دستکاری رشته‌ها و عبارات منظم](14-Strings-and-Regular-Expressions.ipynb) صحبت خواهیم کرد).
 
 ## پایان خط، پایان دستور
 
@@ -59,7 +58,7 @@ midpoint = 5
 
 این یک عمل انتساب است، جایی که یک متغیر به نام `midpoint` ایجاد کرده و مقدار `5` را به آن اختصاص داده‌ایم.
 توجه کنید که پایان این دستور به سادگی با پایان خط مشخص شده است.
-این برخلاف زبان‌هایی مثل C و C++ است که در آن‌ها هر دستور باید با یک سمیکالن (`;`) به پایان برسد.
+این برخلاف زبان‌هایی مثل C و ++C است که در آن‌ها هر دستور باید با یک سمیکالن (`;`) به پایان برسد.
 
 در پایتون، اگر بخواهید یک دستور به خط بعد ادامه پیدا کند، می‌توانید از علامت `\` برای نشان دادن این موضوع استفاده کنید:
 
@@ -126,7 +125,7 @@ for i in range(10):
 for(int i=0; i<100; i++)
    {
       // آکولادها بلوک کد را نشان می‌دهند
-      total += i;
+      ;total += i
    }
 ```
 
@@ -161,7 +160,7 @@ for i in range(100):
 
 استفاده پایتون از فاصله‌های معنادار اغلب برای برنامه‌نویسانی که به زبان‌های دیگر عادت دارند، غافلگیرکننده است. اما در عمل، این ویژگی می‌تواند منجر به تولید کدهای بسیار منسجم‌تر و خواناتر نسبت به زبان‌هایی شود که تورفتگی بلوک‌های کد را اعمال نمی‌کنند.
 
-اگر با استفاده پایتون از فاصله‌های سفید موافق نیستید، پیشنهاد می‌کنم آن را امتحان کنید: همانطور که خودم این تجربه را داشتم، ممکن است متوجه شوید که به مرور زمان به آن علاقه‌مند خواهید شد.
+اگر با استفاده پایتون از فاصله‌ها موافق نیستید، پیشنهاد می‌کنم آن را امتحان کنید: همانطور که خودم این تجربه را داشتم، ممکن است متوجه شوید که به مرور زمان به آن علاقه‌مند خواهید شد.
 
 در نهایت، باید توجه داشته باشید که **مقدار** فاصله‌ای که برای تورفتگی بلوک‌های کد استفاده می‌شود، به انتخاب کاربر بستگی دارد، به شرطی که در طول اسکریپت ثابت بماند.
 
@@ -169,7 +168,7 @@ for i in range(100):
 
 توجه داشته باشید که بسیاری از ویرایشگرهای متنی مانند Emacs و Vim دارای حالت‌های مخصوص پایتون هستند که به طور خودکار تورفتگی چهارفاصله را اعمال می‌کنند.
 
-فاصله‌های درون خطوط مهم نیستند
+## فاصله‌های درون خطوط مهم نیستند
 در حالی که شعار فاصله‌های معنادار برای فاصله‌های قبل از خطوط (که نشان‌دهنده بلوک کد هستند) صادق است، فاصله‌های درون خطوط کد پایتون اهمیتی ندارند.
 
 برای مثال، هر سه عبارت زیر معادل هستند:
@@ -180,9 +179,9 @@ x = 1 + 2
 x             =        1    +                2
 ```
 
-سوءاستفاده از این انعطاف‌پذیری می‌تواند منجر به مشکلاتی در خوانایی کد شود – در واقع، سوءاستفاده از فاصله‌های سفید اغلب یکی از روش‌های اصلی برای مبهم‌سازی عمدی کد است (که برخی افراد به عنوان سرگرمی انجام می‌دهند).
+سوءاستفاده از این انعطاف‌پذیری می‌تواند منجر به مشکلاتی در خوانایی کد شود – در واقع، سوءاستفاده از فاصله‌ها اغلب یکی از روش‌های اصلی برای مبهم‌سازی عمدی کد است (که برخی افراد به عنوان سرگرمی انجام می‌دهند).
 
-استفاده مؤثر از فاصله‌های سفید می‌تواند منجر به کدهای بسیار خواناتر شود، به ویژه در مواردی که عملگرها پشت سر هم قرار می‌گیرند – دو عبارت زیر را برای محاسبه توان منفی مقایسه کنید:
+استفاده مؤثر از فاصله‌ها می‌تواند منجر به کدهای بسیار خواناتر شود، به ویژه در مواردی که عملگرها پشت سر هم قرار می‌گیرند – دو عبارت زیر را برای محاسبه توان منفی مقایسه کنید:
 
 ``` python
 x=10**-2
@@ -196,13 +195,11 @@ x = 10 ** -2
 
 به نظر من نسخه دوم با فاصله‌ها در نگاه اول بسیار راحت‌تر خوانده می‌شود.
 
-اکثر راهنماهای سبک کدنویسی پایتون توصیه می‌کنند:
-- از یک فاصله در اطراف عملگرهای دوتایی استفاده شود
-- از فاصله در اطراف عملگرهای یکتایی استفاده نشود
+اکثر راهنماهای سبک کدنویسی پایتون توصیه می‌کنند:از یک فاصله در اطراف عملگرهای دوتایی استفاده شود و از فاصله در اطراف عملگرهای یکتایی استفاده نشود.
 
 ما در مورد عملگرهای پایتون بیشتر در [معناشناسی پایه پایتون: عملگرها](04-Semantics-Operators.ipynb) بحث خواهیم کرد.
 
-پرانتزها برای گروه‌بندی یا فراخوانی استفاده می‌شوند
+## پرانتزها برای گروه‌بندی یا فراخوانی استفاده می‌شوند
 در قطعه کد قبلی، دو کاربرد مختلف پرانتز را مشاهده می‌کنیم.
 اولین کاربرد، استفاده معمول برای گروه‌بندی عبارات یا عملیات‌های ریاضی است:
 
@@ -216,7 +213,7 @@ x = 10 ** -2
 ```
 
 همچنین از پرانتزها برای نشان دادن فراخوانی یک تابع استفاده می‌شود.
-در قطعه کد زیر، از تابع print() برای نمایش محتوای یک متغیر استفاده شده است (به کادر کناری مراجعه کنید).
+در قطعه کد زیر، از تابع ()print برای نمایش محتوای یک متغیر استفاده شده است (به کادر کناری مراجعه کنید).
 فراخوانی تابع با یک جفت پرانتز باز و بسته نشان داده می‌شود که آرگومان‌های تابع در داخل آن قرار می‌گیرند:
 
 ```python
@@ -244,29 +241,29 @@ print(L)
 ```
 
 پرانتزهای `()` بعد از `sort` نشان‌دهنده‌ی **اجرای تابع** هستند و حتی اگر تابع هیچ ورودی‌ای نداشته باشد، وجود آنها **الزامی** است.  
-بدون این پرانتزها، خود تابع (نه نتیجۀ اجرای آن) اشاره شده است.
+بدون این پرانتزها، به خود تابع (نه نتیجۀ اجرای آن) اشاره میشود .
 
-## نکته جانبی: توجه به تابع `print()`
+## نکته جانبی: توجه به تابع `()print`
 
-در بالا از تابع `print()` به عنوان مثال استفاده کردیم.  
-تابع `print()` یکی از مواردی است که بین پایتون *۲.x* و *۳.x* تغییر کرده است. در پایتون ۲، `print` به عنوان یک **عبارت (statement)** عمل می‌کرد؛ یعنی می‌توانستید به این شکل بنویسید:
+در بالا از تابع `()print` به عنوان مثال استفاده کردیم.  
+تابع `()print` یکی از مواردی است که بین پایتون *x.2* و *۳.x* تغییر کرده است. در پایتون ۲، `print` به عنوان یک **عبارت (statement)** عمل می‌کرد؛ یعنی می‌توانستید به این شکل بنویسید:
 
 ```python
-# فقط در پایتون ۲!
->>> print "first value:", 1
-first value: 1
+print "first value:", 1
+
+>>> first value: 1
 ```
 
-به دلایل مختلف، توسعه‌دهندگان زبان تصمیم گرفتند که در پایتون ۳، `print()` به یک **تابع (function)** تبدیل شود، بنابراین حالا به این شکل می‌نویسیم:
+به دلایل مختلف، توسعه‌دهندگان زبان تصمیم گرفتند که در پایتون ۳، `()print` به یک **تابع (function)** تبدیل شود، بنابراین حالا به این شکل می‌نویسیم:
 
 ```python
-# فقط در پایتون ۳!
->>> print("first value:", 1)
-first value: 1
+print("first value:", 1)
+
+>>> first value: 1
 ```
 
 این یکی از تغییرات ناسازگار بین پایتون ۲ و ۳ است.  
-در زمان نگارش این کتاب، معمولاً با کدهای نوشته شده در هر دو نسخه پایتون مواجه می‌شوید، و وجود عبارت `print` (به جای تابع `print()`) اغلب یکی از اولین نشانه‌هایی است که مشخص می‌کند شما با کد پایتون ۲ سروکار دارید.
+در زمان نگارش این کتاب، معمولاً با کدهای نوشته شده در هر دو نسخه پایتون مواجه می‌شوید، و وجود عبارت `print` (به جای تابع `()print`) اغلب یکی از اولین نشانه‌هایی است که مشخص می‌کند شما با کد پایتون ۲ سروکار دارید.
 
 ## جمع‌بندی و یادگیری بیشتر
 
@@ -276,13 +273,4 @@ first value: 1
 https://www.python.org/dev/peps/pep-0008/  
 
 با شروع نوشتن کدهای بیشتر در پایتون، مطالعه این راهنما بسیار مفید خواهد بود!  
-پیشنهادهای سبکی این راهنما، حاصل تجربیات بسیاری از متخصصان پایتون است و اکثر آن‌ها فراتر از یک وسواس ظاهری هستند: این توصیه‌ها بر اساس تجربه عملی ارائه شده‌اند و می‌توانند به شما در جلوگیری از خطاها و باگ‌های ظریف در کد کمک کنند.## جمع‌بندی و یادگیری بیشتر
-
-این بررسی بسیار مختصر، ویژگی‌های اساسی نحو (syntax) پایتون بود که هدف آن، ایجاد یک چارچوب مرجع مناسب برای درک کدهای بخش‌های بعدی است.  
-ما چندین بار به «راهنمای سبک» (style guide) پایتون اشاره کردیم که به تیم‌ها کمک می‌کند تا کدهایی با سبک یکنواخت بنویسند.  
-پرکاربردترین راهنمای سبک در پایتون، **PEP8** نام دارد که می‌توانید آن را در آدرس زیر پیدا کنید:  
-https://www.python.org/dev/peps/pep-0008/  
-
-با شروع نوشتن کدهای بیشتر در پایتون، مطالعه این راهنما بسیار مفید خواهد بود!  
 پیشنهادهای سبکی این راهنما، حاصل تجربیات بسیاری از متخصصان پایتون است و اکثر آن‌ها فراتر از یک وسواس ظاهری هستند: این توصیه‌ها بر اساس تجربه عملی ارائه شده‌اند و می‌توانند به شما در جلوگیری از خطاها و باگ‌های ظریف در کد کمک کنند.
-
